--- a/assets/styles.css
+++ b/assets/styles.css
@@ -35,19 +35,20 @@ main {
 
 li {
     list-style: none;
-    margin-left: -30px;
+    padding: 5px;
+    border-style: dotted;
+    border-color: darkgray;
+    margin: 5px 0px 5px -35px;
 }
 
 .card {
   background-color: silver;
-  /* justify-content: space-between;
-  flex-wrap: wrap; */
   border-radius: 5px;
   border-width: 1px;
   margin-bottom: 25px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
   color: white;
-  max-width: 300px;
+  width: 400px;
   padding: 10px;
 }
 
